# Stm32G030_PIO

./: .gitignore  CMakeLists.txt  README.md  README.txt  STM32G030F6PX_FLASH.ld  platformio.ini
boards/: genericSTM32G030F6.json
include/: i2c.h  system.h  tm1650.h
src/: i2c.c  main.c  system.c  tm1650.c
